--- a/mapa/about.html
+++ b/mapa/about.html
@@ -165,7 +165,11 @@
               <h3 class="h2">Структура МАПА-ГРУПП</h3>
             </div>
             <div class="col-xl-18 offset-xl-4 col-lg-18 offset-lg-4 col-md-20 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
-              <img src="img/about/scheme.svg" alt="" class="w-100">
+              <!-- <img src="img/about/scheme.svg" alt="" class="w-100"> -->
+              <picture>
+                <source srcset="img/about/scheme_sm.svg" media="(max-width: 766px)">
+                <img class="w-100" src="img/about/scheme.svg" alt="Структура">
+               </picture>
             </div>
           </div>
         </div>
