--- a/mapa/news.html
+++ b/mapa/news.html
@@ -105,54 +105,55 @@
         <div class="newsBody">
             <div class="row">
                 <div class="col-xl-17 offset-xl-4 col-lg-17 offset-lg-4 col-md-18 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2 m-b-3">
-                    <div class="newsBody__item m-b-2 p-t-2 p-b-2"> 
+                    <div class="newsBody__item m-b-2"> 
                         <div class="row align-items-stretch ">
-                            <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-19 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+                            <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-19 offset-md-3 col-sm-22 offset-sm-1 col-22 offset-1">
                                 <a class="newsBody__itemImg imgW imgW_newsBody" href="">
                                     <img class="w-100" src="img/n1.jpg" alt="">
                                 </a>
                             </div>
-                            <div class="col-xl-10 offset-xl-2 col-lg-10 offset-lg-2 col-md-19 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+                            <div class="col-xl-10 offset-xl-2 col-lg-10 offset-lg-2 col-md-19 offset-md-3 col-sm-22 offset-sm-1 col-22 offset-1">
                                 <div class="newsBody__itemText">
                                     <p class="h7"><a href="">Обслуживание и уход за полимерным полом</a></p>
                                     <p class="p1 m-b-3">Компания «НОВЫЙ ПОЛ NP» заливает любые системы полимерных полов. Гарантия надежности, долговечности, экологической чистоты и эстетичности. Сжатые сроки выполнения заказов, доступные тарифы</p>
-                                    <p class="p1">02.02.2020</p>
+                                    <p class="p1 newsBody__itemDate">02.02.2020</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="newsBody__item m-b-2 p-t-2 p-b-2"> 
-                        <div class="row">
-                            <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-19 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
-                                <a class="newsBody__itemImg imgW imgW_newsBody" href="">
-                                    <img class="w-100" src="img/n1.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="col-xl-10 offset-xl-2 col-lg-10 offset-lg-2 col-md-19 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
-                                <div class="newsBody__itemText">
-                                    <p class="h7"><a href="">Обслуживание и уход за полимерным полом</a></p>
-                                    <p class="p1 m-b-3">Компания «НОВЫЙ ПОЛ NP» заливает любые системы полимерных полов. Гарантия надежности, долговечности, экологической чистоты и эстетичности. Сжатые сроки выполнения заказов, доступные тарифы</p>
-                                    <p class="p1">02.02.2020</p>
-                                </div>
+                    <div class="newsBody__item m-b-2"> 
+                      <div class="row align-items-stretch ">
+                          <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-19 offset-md-3 col-sm-22 offset-sm-1 col-22 offset-1">
+                              <a class="newsBody__itemImg imgW imgW_newsBody" href="">
+                                  <img class="w-100" src="img/n1.jpg" alt="">
+                              </a>
+                          </div>
+                          <div class="col-xl-10 offset-xl-2 col-lg-10 offset-lg-2 col-md-19 offset-md-3 col-sm-22 offset-sm-1 col-22 offset-1">
+                              <div class="newsBody__itemText">
+                                  <p class="h7"><a href="">Обслуживание и уход за полимерным полом</a></p>
+                                  <p class="p1 m-b-3">Компания «НОВЫЙ ПОЛ NP» заливает любые системы полимерных полов. Гарантия надежности, долговечности, экологической чистоты и эстетичности. Сжатые сроки выполнения заказов, доступные тарифы</p>
+                                  <p class="p1 newsBody__itemDate">02.02.2020</p>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="newsBody__item m-b-2"> 
+                    <div class="row align-items-stretch ">
+                        <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-19 offset-md-3 col-sm-22 offset-sm-1 col-22 offset-1">
+                            <a class="newsBody__itemImg imgW imgW_newsBody" href="">
+                                <img class="w-100" src="img/n1.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-xl-10 offset-xl-2 col-lg-10 offset-lg-2 col-md-19 offset-md-3 col-sm-22 offset-sm-1 col-22 offset-1">
+                            <div class="newsBody__itemText">
+                                <p class="h7"><a href="">Обслуживание и уход за полимерным полом</a></p>
+                                <p class="p1 m-b-3">Компания «НОВЫЙ ПОЛ NP» заливает любые системы полимерных полов. Гарантия надежности, долговечности, экологической чистоты и эстетичности. Сжатые сроки выполнения заказов, доступные тарифы</p>
+                                <p class="p1 newsBody__itemDate">02.02.2020</p>
                             </div>
                         </div>
                     </div>
-                    <div class="newsBody__item m-b-2 p-t-2 p-b-2"> 
-                        <div class="row">
-                            <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-19 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
-                                <a class="newsBody__itemImg imgW imgW_newsBody" href="">
-                                    <img class="w-100" src="img/n1.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="col-xl-10 offset-xl-2 col-lg-10 offset-lg-2 col-md-19 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
-                                <div class="newsBody__itemText">
-                                    <p class="h7"><a href="">Обслуживание и уход за полимерным полом</a></p>
-                                    <p class="p1 m-b-3">Компания «НОВЫЙ ПОЛ NP» заливает любые системы полимерных полов. Гарантия надежности, долговечности, экологической чистоты и эстетичности. Сжатые сроки выполнения заказов, доступные тарифы</p>
-                                    <p class="p1">02.02.2020</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  </div>
+
 
 
                 </div>
