--- a/mapa/newsD.html
+++ b/mapa/newsD.html
@@ -97,13 +97,13 @@
         </header>
         <section class="newsDBody p-t-6 p-b-4">
           <div class="container-fluid">
-            <div class="row m-b-3">
+            <div class="row m-b-4">
               <div class="col-xl-13 offset-xl-4 col-lg-13 offset-lg-4 col-md-15 offset-md-3 col-sm-18 offset-sm-3 col-18 offset-3">
                 <h1 class="h2">Обслуживание и уход за полимерным полом</h1>
               </div>
             </div>
             <div class="row align-items-stretch">
-              <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-15 offset-md-3 col-sm-18 offset-sm-3 col-18 offset-3 m-b-3">
+              <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-15 offset-md-3 col-sm-18 offset-sm-3 col-18 offset-3">
                 <img src="img/pr/1.jpg" alt="" class="w-100 newsDBody__img">
               </div>
               <div class="col-xl-8 offset-xl-1 col-lg-9 offset-lg-1 col-md-15 offset-md-3 col-sm-18 offset-sm-3 col-18 offset-3">
@@ -121,6 +121,12 @@
                     Нюансы выбора полимерного покрытия
                   </h3>
                   <p class="p1">Когда изготавливают обычные пром полы, ограничиваются просто заливкой. Но наливной пол в квартирах и частных домах обычно стараются украшать. Для этой цели часто добавляют краску непосредственно в используемый раствор. В другом варианте к полимерной смеси прибавляют специальные крупинки (крошки). Разница в их размере, цвете, форме и блеске бывает очень велика. Но самые оригинально мыслящие люди, создавая эпоксидный пол, могут нанести на него изображение по своему вкусу. И напоследок — немного о технологии работы. Исходную поверхность максимально очищают, устраняют все возможные дефекты. Прежнее покрытие на 100% убирают. Основание максимально разравнивают, чтобы избежать отслоения. Для той же цели придают поверхности максимально шершавый вид. Лить раствор надо при температуре минимум + 10 градусов, иначе застывать он будет непомерно долго.</p>
+              </div>
+            </div>
+            <div class="row align-items-stretch">
+              <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-15 offset-md-3 col-sm-18 offset-sm-3 col-18 offset-3 m-b-3">
+              </div>
+              <div class="col-xl-8 offset-xl-1 col-lg-9 offset-lg-1 col-md-15 offset-md-3 col-sm-18 offset-sm-3 col-18 offset-3">
                   <div class="btnWrap btnWrap_right m-t-3 m-b-4">
                     <p class="p1">20.08.2001</p>
                   </div>
