--- a/mapa/project.html
+++ b/mapa/project.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <!-- <div class="overflow-hidden"> -->
+    <div class="overflow-hidden">
       <header class="header">
         <div class="container-fluid h-100">
           <div class="col-22 offset-1 header__borderT"></div>
@@ -95,66 +95,176 @@
           <div class="col-22 offset-1 header__borderT header__lines"></div>
         </div>
       </header>
-      <section class="project p-t-6 p-b-5">
+      <section class="projectL p-t-6 p-b-5">
         <div class="container-fluid">
           <div class="row align-items-stretch">
             <div class="col-xl-7 offset-xl-2 col-lg-9 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
-              <div class="project__list">
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">цех по переработки форели</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
-                </div>
-                <div class="project__item">
-                  <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">IQ Гатчина</a></p>
+              <div class="swiper-container swiper-container__head projectL__head" style="overflow: visible;">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">IQ Гатчина</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">Академия таможни</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">артмуза</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">бж море</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">бц ткачи</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">бц электра</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">велигонты</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">вертекс</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/1.jpg" data-img2="img/pr/2.jpg">волхов</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                    <p class="h2 h2_contour"><a href="/" data-img1="img/pr/2.jpg" data-img2="img/pr/1.jpg">гладкое агроторф</a></p>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-10 offset-xl-3 col-lg-9 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 d-none d-md-block">
-              <div class="project__detailImg">
-                <img src="img/pr/1.jpg" alt="" class="project__detailImg1 w-100 m-b-3">
-                <img src="img/pr/2.jpg" alt="" class="project__detailImg2 w-100">
+              <div class="swiper-container swiper-container__img projectL__images" style="overflow: visible;">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="imgW imgW_1x2">
+                      <img src="img/pr/1.jpg" alt="" class="projectL__detailImg1 w-100" loading="lazy">
+                    </div>
+                  </div>
+                  
+                </div>
               </div>
               <div class="h-100"></div>
             </div>
           </div>
         </div>
       </section>
+      <script src="js/swiper.min.js"></script>
 
+      <script>
+        let slidesIms = document.querySelectorAll(".swiper-container__img .swiper-slide");
+        var swiperImg = new Swiper(".swiper-container__img", {
+          direction: "vertical",
+          allowTouchMove: false,
+          slidesPerView: 1,
+          spaceBetween: 60,
+          // mousewheel: true,
+          // height: 200,
+          centeredSlides: true,
+        });
+        slidesIms.forEach(el => {
+          el.style.height="";
+        });
+        swiperImg.updateAutoHeight();
+        swiperImg.update();
+
+        let slidesH = document.querySelectorAll(".swiper-container__head .swiper-slide");
+        var swiperH = new Swiper(".swiper-container__head", {
+          direction: 'vertical',
+          autoHeight: true,
+          roundLengths:true,
+          setWrapperSize:false,
+          // virtualTranslate:true,
+          // freeMode:true,
+          // freeModeMomentum:true
+          mousewheel: true,
+          centeredSlides:true,
+          on: {
+            slideChange: function () {
+              slidesH.forEach(el => {
+                el.style.height="";
+              });
+            },
+            slideChangeTransitionStart: function () {
+              slidesH.forEach(el => {
+                el.style.height="";
+              });
+            },
+            slideNextTransitionStart: function(){
+              swiperImg.slideTo(swiperH.activeIndex)
+            },
+            slidePrevTransitionStart: function(){
+              swiperImg.slideTo(swiperH.activeIndex)
+            },
+          },
+        });
+        slidesH.forEach(el => {
+          el.style.height="";
+        });
+        swiperH.updateAutoHeight();
+        swiperH.update();
+        slidesH.forEach(el => {
+          el.style.height="";
+        });
+     
+        let sliderLink = document.querySelectorAll(".projectL__head .swiper-slide a");
+        sliderLink.forEach((el,n) => {
+          el.addEventListener('click', function(e) {
+             e.preventDefault();
+             if (el.closest(".swiper-slide-active")){
+              document.location.href = el.href;
+             } else{
+              swiperH.slideTo(n);
+             }
+          })
+        });
+        </script>
 
       <div class="footerWrap">
         <footer class="footer m-t-3 m-b-3">
