--- a/mapa/projectD.html
+++ b/mapa/projectD.html
@@ -96,7 +96,7 @@
         </div>
       </header>
       
-      <section class="prDfirst p-t-6 p-b-4">
+      <section class="prDfirst p-t-6 ">
         <div class="container-fluid">
           <div class="row m-b-3">
             <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-7 offset-md-3 col-sm-17 offset-sm-2 col-17 offset-2 m-b-2">
@@ -111,11 +111,11 @@
               <img src="img/prD/1.jpg" alt="" class="w-100">
             </div>
           </div>
-          <div class="row m-b-3">
-            <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-7 offset-md-3 col-sm-17 offset-sm-2 col-17 offset-2 m-b-2">
+          <div class="row ">
+            <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-8 offset-md-3 col-sm-17 offset-sm-2 col-17 offset-2 m-b-2">
               
             </div>
-            <div class="col-xl-6 offset-xl-1 col-lg-7 offset-lg-1 col-md-10 offset-md-1 col-sm-17 offset-sm-2 col-17 offset-2">
+            <div class="col-xl-6 offset-xl-1 col-lg-7 offset-lg-1 col-md-9 offset-md-1 col-sm-17 offset-sm-2 col-17 offset-2 m-b-2">
               <span class="num1 d-block m-b-2">64 000</span>
               <p class="p1">
                 Балтийская жемчужина ЖК Море 1-3;<br><br>Заказчик: ООО Монолитстрой 3;<br><br>Балтийская жемчужина, ул. Адмирала Трибуца дома 5, 7;
@@ -126,16 +126,23 @@
       </section>
       <section class="prDNum">
         <div class="container-fluid">
-          <div class="row m-b-3">
-            <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-7 offset-md-3 col-sm-17 offset-sm-2 col-17 offset-2 m-b-2">
-              <img src="img/prD/2.jpg" alt="" class="w-100 m-b-3">
+          <div class="row row align-items-end">
+            <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-8 offset-md-3 col-sm-17 offset-sm-2 col-17 offset-2">
+              <img src="img/prD/2.jpg" alt="" class="w-100 m-b-3 prDNum__imgF">
+            </div>
+            <div class="col-xl-6 offset-xl-1 col-lg-7 offset-lg-1 col-md-9 offset-md-1 col-sm-17 offset-sm-2 col-17 offset-2 position-relative">
+              <div class="prDNum__bg"></div>
+              <img src="img/prD/3.jpg" alt="" class="w-100 m-b-3">
+            </div>
+          </div>
+          <div class="row m-b-3 prDNum__grayBg p-b-3">
+            <div class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-8 offset-md-3 col-sm-17 offset-sm-2 col-17 offset-2 m-b-2">
               <span class="num1 d-block m-b-2">64 000</span>
               <p class="p1">
                 Балтийская жемчужина ЖК Море 1-3;<br><br>Заказчик: ООО Монолитстрой 3;<br><br>Балтийская жемчужина, ул. Адмирала Трибуца дома 5, 7;
               </p>
             </div>
-            <div class="col-xl-6 offset-xl-1 col-lg-7 offset-lg-1 col-md-10 offset-md-1 col-sm-17 offset-sm-2 col-17 offset-2">
-              <img src="img/prD/3.jpg" alt="" class="w-100 m-b-3">
+            <div class="col-xl-6 offset-xl-1 col-lg-7 offset-lg-1 col-md-9 offset-md-1 col-sm-17 offset-sm-2 col-17 offset-2">
               <span class="num1 d-block m-b-2">64 000</span>
               <p class="p1">
                 Балтийская жемчужина ЖК Море 1-3;<br><br>Заказчик: ООО Монолитстрой 3;<br><br>Балтийская жемчужина, ул. Адмирала Трибуца дома 5, 7;
