--- a/mapa/act.html
+++ b/mapa/act.html
@@ -206,8 +206,8 @@
             <div
               class="col-xl-8 offset-xl-4 col-lg-8 offset-lg-4 col-md-10 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2 d-flex flex-column justify-content-around"
             >
-              <h2 class="h2">Сборка и обслуживание холодильных камер</h2>
-              <!-- <img class="h-100 w-auto ml-auto" src="img/act/2.jpg" alt=""> -->
+              <h2 class="h2 m-b-3">Сборка и обслуживание холодильных камер</h2>
+              <img class="w-100 w-auto ml-auto d-none d-lg-block" src="img/act/2.jpg" alt="">
             </div>
             <div
               class="col-xl-8 offset-xl-1 col-lg-8 offset-lg-1 col-md-7 offset-md-1 col-sm-20 offset-sm-2 col-20 offset-2"
@@ -330,16 +330,89 @@
               </p>
             </div>
           </div>
-          <div class="row">
+          <div class="row m-b-3">
             <div
-              class="col-xl-5 offset-xl-4 col-lg-5 offset-lg-4 col-md-5 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2"
+              class="col-xl-5 offset-xl-4 col-lg-5 offset-lg-4 col-md-5 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2 m-b-2"
             >
-              <img src="img/act/7.jpg" alt="" class="w-100" />
+              <div class="imgW actFloor__img1">
+                <img src="img/act/7.jpg" alt="" class="w-100" />
+              </div>
             </div>
             <div
-              class="col-xl-11 offset-xl-1 col-lg-11 offset-lg-1 col-md-12 offset-md-1 col-sm-20 offset-sm-2 col-20 offset-2"
+              class="col-xl-11 offset-xl-1 col-lg-11 offset-lg-1 col-md-12 offset-md-1 col-sm-20 offset-sm-2 col-20 offset-2 m-b-2"
             >
-              <img src="img/act/8.jpg" alt="" class="w-100" />
+              <div class="imgW actFloor__img2">
+                <img src="img/act/8.jpg" alt="" class="w-100" />
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-3">
+            <div class="col-xl-7 offset-xl-4 col-lg-7 offset-lg-4 col-md-16 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+              <h5 class="h3">Виды услуг:</h5>
+            </div>
+            <div class="col-xl-7 offset-xl-1 col-lg-8 offset-lg-1 col-md-16 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2"></div>
+          </div>
+          <div class="row m-b-3">
+            <div class="col-xl-7 offset-xl-4 col-lg-7 offset-lg-4 col-md-16 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+              <h6 class="h7 m-b-1">ТОНКОСЛОЙНОЕ ПОЛИМЕРНОЕ ПОКРЫТИЕ</h6>
+              <p class="p1">
+                Это эпоксидное или полиуретановое окрасочное покрытие. Применимы для большинства видов строительных объектов – жилищное и гражданское строительство, объекты транспортной и промышленной инфраструктуры
+              </p>
+            </div>
+            <div class="col-xl-7 offset-xl-1 col-lg-8 offset-lg-1 col-md-16 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+              <h6 class="h7 m-b-1">ПРОТИВОСКОЛЬЗЯЩЕЕ ПОЛИМЕРНОЕ ПОКРЫТИЕ</h6>
+              <p class="p1">
+                Кварцнаполненные полы это покрытие, представляющее из себя сочетание полимерных материалов и кварцевого песка, где наполнитель (кварц или иной) добавляется для повышения износостойкости или антискользящих свойств и покрытия
+              </p>
+            </div>
+          </div>
+          <div class="row m-b-3">
+            <div class="col-xl-17 offset-xl-4 col-lg-17 offset-lg-4 col-md-18 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+              <div class="imgW actFloor__img3">
+                <img src="img/act/8.jpg" alt="" class="w-100" />
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-3">
+            <div class="col-xl-5 offset-xl-4 col-lg-5 offset-lg-4 col-md-16 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+              <h6 class="h7 m-b-1">ПОДГОТОВИТЕЛЬНЫЕ РАБОТЫ</h6>
+              <p class="p1">
+                подготовка, досыпка и уплотнение оснований, лабораторное сопровождение;  
+              </p>
+            </div>
+            <div class="col-xl-7 offset-xl-1 col-lg-8 offset-lg-1 col-md-16 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+              <h6 class="h7 m-b-1">НАЛИВНОЕ ПОЛИМЕРНОЕ ПОКРЫТИЕ</h6>
+              <p class="p1">
+                Полы преимущественно используются для обустройства износоустойчивых покрытий на строительных объектах гражданского и промышленного типа, реже — в жилых зданиях. Полы из полимера не только надежны и многофункциональны, но и отличаются декоративными свойствами: могут быть разноцветными или прозрачными, с узорами, логотипами, нумерацией.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="actFloorB">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xl-5 offset-xl-4 col-lg-6 offset-lg-4 col-md-6 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2 m-b-3">
+              <div class="imgW actFloorB__img4">
+                <img src="img/act/8.jpg" alt="" class="w-100" />
+              </div>
+            </div>
+            <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-11 offset-md-1 col-sm-20 offset-sm-2 col-20 offset-2 m-b-3">
+              <div class="imgW actFloorB__img5">
+                <img src="img/act/8.jpg" alt="" class="w-100" />
+              </div>
+            </div>
+          </div>
+          <div class="row p-b-3">
+            <div class="col-xl-7 offset-xl-10 col-lg-9 offset-lg-11 col-md-15 offset-md-3 col-sm-20 offset-sm-2 col-20 offset-2">
+              <h6 class="h7 m-b-1">АНТИСТАТИЧЕСКОЕ ПОКРЫТИЕ</h6>
+              <p class="p1">
+                Антистатический промышленный пол – это система специальных покрытий для пола с высокими антистатическими свойствами. После реализации работ обеспечивается полное распределение электрического статического заряда по поверхности или он успешно отводится в систему заземления.
+              </p>
+              <h6 class="h7 m-b-1 m-t-3">ВОССТАНОВЛЕНИЕ</h6>
+              <p class="p1">
+                Ремонт поврежденных поверхностей или их демонтаж с укладкой нового пола.
+              </p>
             </div>
           </div>
         </div>
