--- a/zapol/index.html
+++ b/zapol/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
   <title>Zapol</title>
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
@@ -102,7 +101,7 @@
           <svg class="mText__elipse" width="1488" height="950" viewBox="0 0 1488 950" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path opacity="0.5" d="M1401.55 235.557C1413.28 267.801 1406.19 305.242 1383.17 345.394C1360.16 385.544 1321.25 428.342 1269.5 471.239C1165.99 557.032 1011.17 643.155 829.565 709.253C647.962 775.351 474.003 808.895 339.565 809.707C272.344 810.113 215.032 802.336 171.593 786.373C128.152 770.41 98.6522 746.287 86.9163 714.043C75.1804 681.799 82.2729 644.358 105.29 604.206C128.305 564.056 167.209 521.259 218.965 478.361C322.473 392.568 477.294 306.445 658.897 240.347C840.5 174.249 1014.46 140.705 1148.9 139.893C1216.12 139.487 1273.43 147.264 1316.87 163.227C1360.31 179.191 1389.81 203.313 1401.55 235.557Z" stroke="#F4F4F4"/>
           </svg>
-            
+
         </div>
       </div>
       <div class="row">
@@ -113,7 +112,7 @@
         </div>
         <div class="col-xl-6 offset-xl-9 col-lg-6 offset-lg-9 col-md-11 offset-md-11 col-sm-20 offset-sm-2 col-20 offset-2">
           <p class="p1">
-            Все наши дома в поселке построены в единой дизайн-системе: каждый из них выглядит гармонично в окружении других домов. Заполье – поселок с небольшими разноцветными домиками, аккуратно встроенными в ландшафт природы. 
+            Все наши дома в поселке построены в единой дизайн-системе: каждый из них выглядит гармонично в окружении других домов. Заполье – поселок с небольшими разноцветными домиками, аккуратно встроенными в ландшафт природы.
           </p>
         </div>
         <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-11 offset-md-11 col-sm-20 offset-sm-2 col-20 offset-2">
@@ -133,7 +132,7 @@
         </div>
         <div class="col-xl-6 offset-xl-14 col-lg-7 offset-lg-14 col-md-11 offset-md-11 col-sm-20 offset-sm-2 col-20 offset-2">
           <p class="p1 p-b-2">
-            В наших домах все продумано до мелочей. Вам остается только заселиться, и сразу же можно ставить чайник и звать гостей. Из крана уже течет питьевая вода из артезианской скважины, в гостиной стоит камин, во дворе лежат нарубленные дрова. 
+            В наших домах все продумано до мелочей. Вам остается только заселиться, и сразу же можно ставить чайник и звать гостей. Из крана уже течет питьевая вода из артезианской скважины, в гостиной стоит камин, во дворе лежат нарубленные дрова.
           </p>
           <p class="p1">Даже такие в таких рутинных вещах, как чистка снега, содержание газона в хорошем состоянии вы можете довериться нам, и все вопросы будут улажены. </p>
         </div>
@@ -147,7 +146,7 @@
             </div>
             <div class="col-xl-6 offset-xl-14 col-lg-7 offset-lg-14 col-md-11 offset-md-11 col-sm-20 offset-sm-2 col-20 offset-2">
               <p class="p1 p-b-2">
-                В наших домах все продумано до мелочей. Вам остается только заселиться, и сразу же можно ставить чайник и звать гостей. Из крана уже течет питьевая вода из артезианской скважины, в гостиной стоит камин, во дворе лежат нарубленные дрова. 
+                В наших домах все продумано до мелочей. Вам остается только заселиться, и сразу же можно ставить чайник и звать гостей. Из крана уже течет питьевая вода из артезианской скважины, в гостиной стоит камин, во дворе лежат нарубленные дрова.
               </p>
               <p class="p1">Даже такие в таких рутинных вещах, как чистка снега, содержание газона в хорошем состоянии вы можете довериться нам, и все вопросы будут улажены. </p>
             </div>
@@ -165,7 +164,7 @@
           let halfY=scrH/2;
           let mfX=0;
           let mfY=0;
-          let mPosX=0; 
+          let mPosX=0;
           let mPosY=0;
           document.querySelector("section.mInv").addEventListener('mousemove', onWindowMouseMove);
 
@@ -184,8 +183,8 @@
               elBg.style.offsetHeight= elWr.scrollHeight+"px"
               requestAnimationFrame(render);
               // console.log('z')
-              el.style.transform="translate("+ (-120 + mPosX) + "px, "+ (-120+mPosY) +"px)"; 
-              elBg.style.transform="translate("+ (120 - mPosX) + "px, "+ (120-mPosY) +"px)"; 
+              el.style.transform="translate("+ (-120 + mPosX) + "px, "+ (-120+mPosY) +"px)";
+              elBg.style.transform="translate("+ (120 - mPosX) + "px, "+ (120-mPosY) +"px)";
           }
 
     </script>
@@ -215,6 +214,7 @@
           class="col-xl-5 offset-xl-17 col-lg-5 offset-lg-17 col-md-5 offset-md-17 col-sm-8 offset-sm-14 col-8 offset-14"
         >
           <div class="btn">Кнопка</div>
+
         </div>
       </div>
     </div>
@@ -251,7 +251,7 @@
               </div>
               <div class="col-lg-12 offset-lg-2 col-md-14 offset-md-4 col-20">
                 <p class="p1">
-                  В 250-300 м от поселка находится река Петлянка. Это место издавна славилось богатыми уловами окуня, щуки, и даже лосося. 
+                  В 250-300 м от поселка находится река Петлянка. Это место издавна славилось богатыми уловами окуня, щуки, и даже лосося.
                 </p>
                 <p class="p1">
                   Ближайшие озера: Красногвардейское, Красавица, Полянское.
@@ -312,12 +312,12 @@
       <div class="row">
         <div class="col-xl-6 offset-xl-9 col-lg-6 offset-lg-9 col-md-11 offset-md-11 col-sm-20 offset-sm-2 col-20 offset-2 m-b-2">
           <p class="p1">
-            Изготавливаем бревна и брусья из дерева, храним готовое сырье на собственном складе. Это помогает тщательно следить за качеством сырья, устранять брак. Мы проводим экспертизу материала для домов, пускаем в строительство только отборное дерево. Строя цивилизацию, мы сохраняем природу. 
+            Изготавливаем бревна и брусья из дерева, храним готовое сырье на собственном складе. Это помогает тщательно следить за качеством сырья, устранять брак. Мы проводим экспертизу материала для домов, пускаем в строительство только отборное дерево. Строя цивилизацию, мы сохраняем природу.
           </p>
         </div>
         <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-11 offset-md-11 col-sm-20 offset-sm-2 col-20 offset-2">
           <p class="p1">
-            Дизайн дома на каждом участке сочетается в ландшафтом природы участка. На участках сохраняем деревья, высаживаем новые растения. В наших посёлках вы будете жить в окружении соснового леса, реки и единомышленников. Добро пожаловать в Заполье!            
+            Дизайн дома на каждом участке сочетается в ландшафтом природы участка. На участках сохраняем деревья, высаживаем новые растения. В наших посёлках вы будете жить в окружении соснового леса, реки и единомышленников. Добро пожаловать в Заполье!
           </p>
         </div>
       </div>
@@ -338,6 +338,17 @@
           <p class="p1 p-b-1">Мы не прекращаем обслуживание дома по истечении гарантийного срока. Вы всегда можете обратиться в компанию NP house, если дому требуется диагностика или ремонт. Мы делаем ваше проживание за городом комфортным.</p>
           <p class="p1">Даём гарантию на свои дома 5 лет. Исправляем возможные поломки, которые могут произойти в течение этого периода. Гарантия распространяется на сам дом, материалы, осуществленные в ходе строительства работы.
           </p>
+          <a href="" class="btn2">
+            <svg width="260" height="260" viewBox="0 0 260 260" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle class="btn2__c1" cx="119.418" cy="137.086" r="114" stroke="#678061" stroke-width="2"/>
+              <circle class="btn2__c2" cx="130" cy="130" r="129.5" stroke="#678061"/>
+              <g class="btn2__arr" >
+                <path d="M89.1914 137.523L152.073 137.523" stroke="#678061" stroke-width="2"/>
+                <path d="M129.993 111.016C131.544 123.27 137.285 132.327 151.967 137.526" stroke="#678061" stroke-width="2"/>
+                <path d="M129.993 164.015C131.544 151.761 137.285 142.704 151.967 137.505" stroke="#678061" stroke-width="2"/>
+              </g>
+            </svg>
+          </a>
         </div>
       </div>
     </section>
@@ -410,6 +421,14 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js" integrity="sha512-RvUydNGlqYJapy0t4AH8hDv/It+zKsv4wOQGb+iOnEfa6NnF2fzjXgRy+FDjSpMfC3sjokNUzsfYZaZ8QAwIxg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/three@0.99.0/build/three.min.js"></script>
+    <script src="js/main.js"></script>
+
   </div>
 </body>
 </html>
