--- a/zapol/404.html
+++ b/zapol/404.html
@@ -4,12 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zapol</title>
+  <title>Zapol404</title>
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
 </head>
 <body>
   <div class="siteWrap">
+  <div class="prel">
+    <svg class="prel__logo" width="45" height="38" viewBox="0 0 45 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g>
+        <path d="M42.0373 0.000266281C41.6531 -0.00491773 41.2716 0.065637 40.9147 0.207899C40.5577 0.35016 40.2323 0.56134 39.9571 0.829371C39.6818 1.0974 39.4621 1.41703 39.3104 1.76999C39.1588 2.12295 39.0782 2.50233 39.0732 2.88644C39.0732 5.05216 42.0373 8.24771 42.0373 8.24771C42.0373 8.24771 44.9999 5.05216 44.9999 2.88644C44.995 2.50245 44.9144 2.1232 44.7629 1.77033C44.6113 1.41747 44.3917 1.0979 44.1166 0.829891C43.8415 0.561879 43.5163 0.350668 43.1595 0.20832C42.8027 0.0659716 42.4214 -0.00472533 42.0373 0.000266281Z"/>
+      </g>
+      <g>
+        <path d="M0 17.7098L8.34151 3.5433H1.07665V0.126953H14.7942L6.53837 14.2934H14.3466V17.7098H0Z" />
+      </g>
+      <g>
+        <path d="M24.7527 37.3307L18.7432 19.4355H23.1922L26.8987 32.0609L30.6067 19.4355H35.0542L29.0476 37.3307H24.7527Z" />
+      </g>
+    </svg>
+    <div class="prel__bg">
+      <img class="prel__bgImg" src="img/prel.jpg" alt="">
+    </div>
+
+  </div>
     <div class="menu d-block d-md-none">
       <div class="row h-100">
         <div class="col-20 offset-2 h-100">
